fix #39586: Import new users from file in dark toggle theme setting are not visible

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_people.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_people.scss
@@ -146,7 +146,7 @@
 			padding: 9.5px;
 			text-align: center;
 			border: 1px solid #ddd;
-			background: #f8f8f8;
+			background: $gray012;
 			border-radius: 0;
 		}
 	}
